# PDF-bot

./: README.md
bot/: app.py  configuration.py  handlers.py  ingestion.py  llm.py  memory.py  pyproject.toml  requirements.txt  vectorstore.py
